BRAZILIAN PORTUGUESE: Updated RM 2.3 files based on EN-rev92865
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93193 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -35,6 +35,7 @@ label.set.security=Seguran\u00e7a
 label.set.vitalRecord=Documento arquiv\u00edstico vital
 label.set.disposition=Programa\u00e7\u00e3o de disposi\u00e7\u00e3o
 label.set.customMetadata=Propriedades personalizadas
+label.set.recordVersion=Vers\u00e3o de documento arquiv\u00edstico
 label.hold.reason=Motivo
 label.hold.delete.empty=Excluir Manter quando vazio
 label.recordLevelDisposition=Aplicado a
@@ -54,6 +55,8 @@ label.storageLocation=Local de armazenamento
 label.shelf=Prateleira
 label.file=Arquivo
 label.box=Caixa
+label.versionDescription=Descri\u00e7\u00e3o da vers\u00e3o
+label.VersionLabel=R\u00f3tulo de vers\u00e3o
 
 ## Common Property Selector
 label.menu.content=Conte\u00fado
@@ -67,7 +70,7 @@ label.menu.custom=Propriedades personalizadas
 button.reject.record=Rejeitar documento arquiv\u00edstico
 button.request-info=Solicitar informa\u00e7\u00f5es
 
-##\ufffdPop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Excluir confirma\u00e7\u00e3o
 message.confirm.delete=Tem certeza de que deseja excluir ''{0}''?
 message.confirm.destroy.title=Destruir confirma\u00e7\u00e3o
@@ -87,6 +90,10 @@ message.request-info-success=Informa\u00e7\u00f5es solicitadas com sucesso
 message.request-info-failure=Ocorreu um erro ao solicitar informa\u00e7\u00f5es
 message.confirm.delete-hold.title=Excluir espera
 message.confirm.delete-hold=Tem certeza de que deseja excluir ''{0}''?
+message.confirm.close-rejected-record.title=Confirmar
+message.confirm.close-rejected-record=Tem certeza de que deseja remover a advert\u00eancia do documento arquiv\u00edstico rejeitado?
+message.confirm.unlink.title=Anular v\u00ednculo da confirma\u00e7\u00e3o
+message.confirm.unlink.text=Tem certeza que deseja anular o v\u00ednculo do documento arquiv\u00edstico?
 
 ## Admin Console
 message.admin-console-access-denied=Voc\u00ea precisa de permiss\u00f5es adicionais para acessar esta p\u00e1gina.
@@ -112,6 +119,7 @@ actions.edit-reason=Editar Manter detalhes
 actions.edit-review-as-of-date=Editar data de revis\u00e3o
 actions.file-report=Arquivar relat\u00f3rio
 actions.link-to=Vincular a...
+actions.unlink-from=Anular v\u00ednculo do documento arquiv\u00edstico
 actions.file-to=Arquivar em...
 actions.manage-permissions=Gerenciar permiss\u00f5es
 actions.move-to=Mover para...
@@ -129,6 +137,7 @@ actions.upload-new-version=Carregar nova vers\u00e3o
 actions.view-details=Visualizar detalhes
 actions.view-audit-log=Visualizar log de auditoria
 actions.create-record=Declarar como documento arquiv\u00edstico
+actions.declare-as-version-record=Declarar como documento arquiv\u00edstico da vers\u00e3o
 actions.hide-record=Ocultar documento arquiv\u00edstico
 actions.reject=Rejeitar
 actions.request-info=Solicitar informa\u00e7\u00f5es
@@ -139,6 +148,9 @@ actions.delete.hold=Excluir espera
 actions.add-to-hold=Adicionar \u00e0 espera
 actions.remove-from-hold=Remover da espera
 actions.file-hold-report=Gerar relat\u00f3rio de espera
+actions.move-dm-record=Mover documento arquiv\u00edstico
+actions.recorded-version-config=Op\u00e7\u00f5es de auto declara\u00e7\u00e3o
+actions.add-relationship=Adicionar relacionamento
 
 ## File Plan Action Outcomes
 message.multi-select={0} itens selecionados
@@ -187,8 +199,8 @@ message.create-disposition-schedule.failure=N\u00e3o foi poss\u00edvel criar a p
 message.create-disposition-schedule.success=Programa\u00e7\u00e3o de disposi\u00e7\u00e3o para ''{0}'' criada
 message.create-record.success=Declarado com sucesso como documento arquiv\u00edstico
 message.create-record.failure=N\u00e3o foi poss\u00edvel declarar como documento arquiv\u00edstico
-message.hide-record.success=Documento arquiv\u00edstico ocultado
-message.hide-record.failure=N\u00e3o foi poss\u00edvel ocultar o documento arquiv\u00edstico
+message.hide-record.success=Documento arquiv\u00edstico ''{0}'' oculto com sucesso
+message.hide-record.failure=N\u00e3o foi poss\u00edvel ocultar documento arquiv\u00edstico ''{0}''
 message.reject.reason=Motivo:
 message.reject.title=Motivo para rejei\u00e7\u00e3o
 message.reject.failure=N\u00e3o foi poss\u00edvel rejeitar ''{0}''
@@ -203,6 +215,12 @@ message.file-hold-report.failure=N\u00e3o foi poss\u00edvel gerar o relat\u00f3r
 message.file-hold-report.success=Relat\u00f3rio de espera gerado
 message.delete-hold.failure=N\u00e3o foi poss\u00edvel excluir espera
 message.delete-hold.success=Espera exclu\u00edda
+message.moveDmRecord.failure=N\u00e3o foi poss\u00edvel mover o documento arquiv\u00edstico ''{0}''
+message.moveDmRecord.success=Documento arquiv\u00edstico ''{0}'' movido com sucesso
+message.recordedVersionConfig.success=Op\u00e7\u00f5es de auto-declara\u00e7\u00e3o definidas com sucesso
+message.recordedVersionConfig.failure=N\u00e3o foi poss\u00edvel definir as op\u00e7\u00f5es de auto-declara\u00e7\u00e3o
+message.unlink.success=V\u00ednculo do documento arquiv\u00edstico anulado com sucesso
+message.unlink.failure=N\u00e3o foi poss\u00edvel anular o v\u00ednculo do documento arquiv\u00edstico
 
 ## File Plan Status Indicators
 status.rm-accession=Ades\u00e3o pendente
@@ -226,6 +244,10 @@ status.rm-scanned-record=Documento arquiv\u00edstico escaneado
 status.rm-web-record=Documento arquiv\u00edstico da Web
 status.rm-is-record=Documento arquiv\u00edstico
 status.rules=Pasta com regras aplicadas
+status.rm-version-record=Documento arquiv\u00edstico da vers\u00e3o
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Todas as revis\u00f5es ser\u00e3o registradas
+status.rm-recorded-version-history-major-revisions=Somente ser\u00e3o registradas as revis\u00f5es principais
 # Exif
 status.exif=Metadados EXIF dispon\u00edveis
 
@@ -350,8 +372,11 @@ details.record.date-filed=Data de arquivamento
 details.record.publication-date=Data de publica\u00e7\u00e3o
 details.record.originator=Originador
 details.record.originating-organization=Organiza\u00e7\u00e3o de origem
+details.version.label=Vers\u00e3o
 # Incomplete Record
 details.undeclared-record.info=Documento arquiv\u00edstico incompleto
+# Rejected Record
+details.rejected-record.info=Documento arquiv\u00edstico rejeitado
 # Transfer Container
 details.transfer-container.title=Transferir {0}
 details.transfer-container.is-accession=<em>Nota:</em> O tipo de transfer\u00eancia \u00e9 Ades\u00e3o
@@ -375,12 +400,6 @@ tip.insitu-tag=Marca
 
 ## Help panels, including Drag and Drop
 show.folders=Mostrar {0} subpasta(s)
-
-details.undeclared-record.info=Documento arquiv\u00edstico incompleto
-details.rejected-record.info=Documento arquiv\u00edstico rejeitado
-details.record.identifier=Identificador de documento arquiv\u00edstico exclusivo
-details.record.originator=Originador
-details.record.originating-organization=Organiza\u00e7\u00e3o de origem
 
 ## Create site dialog
 description.recordsManagementSite=Site do Records Management
@@ -454,3 +473,7 @@ file-to.substitution.date.year.short.label=Ano curto (ex.: 14)
 file-to.substitution.date.year.label=Ano (ex.: 14)
 file-to.substitution.date.year.long.label=Ano longo (ex.: 2014)
 file-to.substitution.date.year.week.label=Semana do ano (ex.: 31)
+
+## Banner icon messages
+banner.rejected-record.info=Consulte as informa\u00e7\u00f5es sobre o documento arquiv\u00edstico rejeitado
+banner.rejected-record.close=Remova o registro de advert\u00eancia rejeitado
