--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_pt_BR.properties
@@ -26,3 +26,5 @@ message.delete-failure=N\u00e3o foi poss\u00edvel excluir a propriedade personal
 
 mandatory.true=Verdadeiro
 mandatory.false=Falso
+
+button.new.custom-metadata=Novo
