GERMAN: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97152 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Alle Revisionen werden als Reco
 status.rm-recorded-version-history-major-revisions=Nur Hauptrevisionen werden als Record deklariert
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
+status.geographic=Geolocation-Metadaten verf\u00fcgbar
+status.dod5015-digital-photograph-record=Record - Digitales Bild
+status.dod5015-pdf-record=PDF-Record
+status.dod5015-scanned-record=Eingescannter Record
+status.dod5015-web-record=Web-Record
 
 # RMA model metadata fields
 label.all=Alle
