SPANISH: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97213 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -150,7 +150,7 @@ actions.remove-from-hold=Eliminar de bloqueo
 actions.file-hold-report=Generar informe de bloqueo
 actions.move-dm-record=Mover documento de archivo
 actions.recorded-version-config=Opciones de declaraci\u00f3n autom\u00e1tica
-actions.add-relationship=A\u00f1adir relaci\u00f3n
+actions.add-relationship=A\u00f1adir Relaci\u00f3n
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementos seleccionados
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Todas las revisiones se guardar
 status.rm-recorded-version-history-major-revisions=Solo las revisiones importantes se guardar\u00e1n como documento de archivo
 # Exif
 status.exif=Metadatos EXIF disponibles
+status.geographic=Metadatos de geolocalizaci\u00f3n disponibles
+status.dod5015-digital-photograph-record=Documento de archivo fotogr\u00e1fico digital
+status.dod5015-pdf-record=Documento de archivo PDF
+status.dod5015-scanned-record=Documento de archivo escaneado
+status.dod5015-web-record=Documento de archivo web
 
 # RMA model metadata fields
 label.all=Todos
