FRENCH: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97214 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Toutes les r\u00e9visions seron
 status.rm-recorded-version-history-major-revisions=Seules les r\u00e9visions majeures seront enregistr\u00e9es
 # Exif
 status.exif=M\u00e9tadonn\u00e9es EXIF disponibles
+status.geographic=M\u00e9tadonn\u00e9es de g\u00e9olocalisation disponibles
+status.dod5015-digital-photograph-record=Photographie num\u00e9rique d'archives
+status.dod5015-pdf-record=Document d'archives Pdf
+status.dod5015-scanned-record=Document d'archives num\u00e9ris\u00e9
+status.dod5015-web-record=Document d'archives Web
 
 # RMA model metadata fields
 label.all=Tout
