ITALIAN: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97215 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -150,7 +150,7 @@ actions.remove-from-hold=Rimuovi da sospesi
 actions.file-hold-report=Genera report di sospensione
 actions.move-dm-record=Sposta record
 actions.recorded-version-config=Opzioni di dichiarazione automatica
-actions.add-relationship=Aggiungi relazione
+actions.add-relationship=Aggiungi Relazione
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementi selezionati
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Tutte le revisioni saranno regi
 status.rm-recorded-version-history-major-revisions=Saranno registrate solo le revisioni maggiori
 # Exif
 status.exif=Metadati EXIF disponibili
+status.geographic=Dati di geolocalizzazione disponibili
+status.dod5015-digital-photograph-record=Record fotografia digitale
+status.dod5015-pdf-record=Record PDF
+status.dod5015-scanned-record=Record scansionato
+status.dod5015-web-record=Record Web
 
 # RMA model metadata fields
 label.all=Tutte
