JAPANESE: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97217 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=\u3059\u3079\u3066\u306e\u6539\
 status.rm-recorded-version-history-major-revisions=\u5927\u5e45\u306a\u6539\u8a02\u306e\u307f\u304c\u8a18\u9332\u3055\u308c\u307e\u3059
 # Exif
 status.exif=EXIF \u30e1\u30bf\u30c7\u30fc\u30bf\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059
+status.geographic=\u4f4d\u7f6e\u60c5\u5831\u30e1\u30bf\u30c7\u30fc\u30bf\u5229\u7528\u53ef\u80fd
+status.dod5015-digital-photograph-record=\u30c7\u30b8\u30bf\u30eb\u5199\u771f\u30ec\u30b3\u30fc\u30c9
+status.dod5015-pdf-record=PDF \u30ec\u30b3\u30fc\u30c9
+status.dod5015-scanned-record=\u30b9\u30ad\u30e3\u30f3\u6e08\u307f\u30ec\u30b3\u30fc\u30c9
+status.dod5015-web-record=Web \u30ec\u30b3\u30fc\u30c9
 
 # RMA model metadata fields
 label.all=\u3059\u3079\u3066
