NORWEGIAN (Bokmal): Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97218 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nb.properties
+++ b/rm-share/config/alfresco/messages/rm_nb.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Alle revisjoner registreres
 status.rm-recorded-version-history-major-revisions=Kun hovedrevisjoner registreres
 # Exif
 status.exif=EXIF-metadata tilgjengelig
+status.geographic=Geografisk lokasjon metadata tilgjengelig
+status.dod5015-digital-photograph-record=Digital bildeoppf\u00f8ring
+status.dod5015-pdf-record=Pdf-oppf\u00f8ring
+status.dod5015-scanned-record=Skannet oppf\u00f8ring
+status.dod5015-web-record=Nettoppf\u00f8ring
 
 # RMA model metadata fields
 label.all=Alle
