BRAZILIAN PORTUGUESE: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97220 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Todas as revis\u00f5es ser\u00e
 status.rm-recorded-version-history-major-revisions=Somente ser\u00e3o registradas as revis\u00f5es principais
 # Exif
 status.exif=Metadados EXIF dispon\u00edveis
+status.geographic=Metadados de geolocaliza\u00e7\u00e3o dispon\u00edveis
+status.dod5015-digital-photograph-record=Documento arquiv\u00edstico fotogr\u00e1fico digital
+status.dod5015-pdf-record=Arquivo PDF
+status.dod5015-scanned-record=Documento arquiv\u00edstico digitalizado
+status.dod5015-web-record=Documento arquiv\u00edstico da Web
 
 # RMA model metadata fields
 label.all=Todos
