SIMPLIFIED CHINESE: Updated file as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97222 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=\u5c06\u8bb0\u5f55\u6240\u6709\
 status.rm-recorded-version-history-major-revisions=\u53ea\u4f1a\u8bb0\u5f55\u4e3b\u8981\u4fee\u8ba2
 # Exif
 status.exif=EXIF \u5143\u6570\u636e\u53ef\u7528
+status.geographic=\u5b9a\u4f4d\u5143\u6570\u636e\u53ef\u7528
+status.dod5015-digital-photograph-record=\u6570\u7801\u7167\u7247\u8bb0\u5f55
+status.dod5015-pdf-record=PDF \u8bb0\u5f55
+status.dod5015-scanned-record=\u626b\u63cf\u7684\u8bb0\u5f55
+status.dod5015-web-record=Web \u8bb0\u5f55
 
 # RMA model metadata fields
 label.all=\u5168\u90e8
