DUTCH: Updated files as per EN-RM-rev96840
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97225 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=Alle revisies worden vastgelegd
 status.rm-recorded-version-history-major-revisions=Alleen primaire revisies worden vastgelegd
 # Exif
 status.exif=EXIF-metagegevens beschikbaar
+status.geographic=Metagegevens van geolocatie beschikbaar
+status.dod5015-digital-photograph-record=Digitale fotorecord
+status.dod5015-pdf-record=Pdf-record
+status.dod5015-scanned-record=Gescande record
+status.dod5015-web-record=Web-record
 
 # RMA model metadata fields
 label.all=Alles
