GERMAN: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97858 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Best\u00e4tigung vernichten
 message.confirm2.destroy=Der Inhalt f\u00fcr die Datei wird dauerhaft gel\u00f6scht. M\u00f6chten Sie wirklich fortfahren?
 message.confirm2.destroyMultiple=Der Inhalt f\u00fcr die Dateien wird dauerhaft gel\u00f6scht. M\u00f6chten Sie wirklich fortfahren?
 message.confirm.hide.record.title=Record ausblenden
-message.confirm.hide.record=Sie blenden den Record aus. Hierdurch k\u00f6nnen Sie diesen Record nicht mehr innerhalb Ihrer Collaboration-Site anzeigen.
+message.confirm.hide.record=Diese Datei wurde zu einem Record gemacht. Klicken Sie auf OK, um sie auszublenden und hier nicht mehr anzuzeigen.
 message.select=Ausw\u00e4hlen...
 message.pdf-record-fonts.title=PDF-Records: Pr\u00fcfung eingebetteter Schriften
 message.pdf-record-fonts.accession=\u00dcberpr\u00fcfen Sie, ob alle soeben f\u00fcr eine Aufnahme verarbeiteten PDF-Records die entsprechenden eingebetteten Schriften beinhalten.
@@ -91,7 +91,7 @@ message.request-info-failure=Beim Anfordern von Informationen ist ein Fehler auf
 message.confirm.delete-hold.title=Sperrbereich l\u00f6schen
 message.confirm.delete-hold=M\u00f6chten Sie ''{0}'' wirklich l\u00f6schen?
 message.confirm.close-rejected-record.title=Best\u00e4tigen
-message.confirm.close-rejected-record=M\u00f6chten Sie die Warnung f\u00fcr den abgelehnten Record wirklich l\u00f6schen?
+message.confirm.close-rejected-record=M\u00f6chten Sie die Warnung f\u00fcr den abgelehnten Record wirklich l\u00f6schen? Wenn sie sie l\u00f6schen, stehen die Optionen zum Deklarieren der Datei als Record wieder zur Verf\u00fcgung.
 message.confirm.unlink.title=Aufheben der Verkn\u00fcpfung best\u00e4tigen
 message.confirm.unlink.text=M\u00f6chten Sie die Verkn\u00fcpfung zum Record wirklich aufheben?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Neue Version hochladen
 actions.view-details=Details anzeigen
 actions.view-audit-log=Audit-Protokoll anzeigen
 actions.create-record=Als Record deklarieren
-actions.declare-as-version-record=Als Versions-Record deklarieren
+actions.declare-as-version-record=Version als Record deklarieren
 actions.hide-record=Record ausblenden
 actions.reject=Ablehnen
 actions.request-info=Informationen anfordern
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=Trennung f\u00fcr ''{0}'' konnte nicht aufgehoben we
 message.undo-cutoff.success=Trennung f\u00fcr ''{0}'' aufheben
 message.create-disposition-schedule.failure=Entsorgungsplan f\u00fcr ''{0}'' konnte nicht erstellt werden.
 message.create-disposition-schedule.success=Entsorgungsplan f\u00fcr ''{0}'' erstellt.
-message.create-record.success=Erfolgreich als Record deklariert.
+message.create-record.success=Diese Datei wurde zu einem Record gemacht und es stehen nur noch begrenzt Aktionen zur Verf\u00fcgung.
 message.create-record.failure=Deklarieren als Record nicht m\u00f6glich.
+message.declare-version-as-record.success=Diese Version der Datei wurde als Record deklariert.
+message.declare-version-as-record.failure=Deklarieren der Version als Record nicht m\u00f6glich.
 message.hide-record.success=Record ''{0}'' erfolgreich ausgeblendet
 message.hide-record.failure=Record ''{0}'' konnte nicht ausgeblendet werden
 message.reject.reason=Grund:
