--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_de.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=Es wurden keine Beziehungen definiert
+label.list.no.data.message=Es wurden noch keine Beziehungen definiert.
 label.toolbar.relationships=Beziehungen
-label.button.new-relationship=Neue Beziehung hinzuf\u00fcgen
+label.button.new-relationship=Beziehung hinzuf\u00fcgen
 label.confirmation.title.delete-relationship=Beziehung l\u00f6schen
 label.confirmationPrompt.delete-relationship=M\u00f6chten Sie ''{node.properties.cm:name}'' wirklich l\u00f6schen?
 label.delete-relationship=Beziehung l\u00f6schen
