SPANISH: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97860 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Confirmaci\u00f3n de destrucci\u00f3n
 message.confirm2.destroy=El contenido del fichero se eliminar\u00e1 permanentemente, \u00bfest\u00e1 seguro de que desea continuar?
 message.confirm2.destroyMultiple=El contenido de los ficheros se eliminar\u00e1 permanentemente, \u00bfest\u00e1 seguro de que desea continuar?
 message.confirm.hide.record.title=Ocultar documento de archivo
-message.confirm.hide.record=Est\u00e1 ocultando el documento de archivo y ya no podr\u00e1 ver este documento de archivo en su sitio de colaboraci\u00f3n.
+message.confirm.hide.record=Este fichero se ha convertido en documento de archivo. Haga clic en OK para ocultarlo y no pueda verse aqu\u00ed.
 message.select=Seleccionar...
 message.pdf-record-fonts.title=Documentos de archivo PDF: comprobaci\u00f3n de fuente incrustada
 message.pdf-record-fonts.accession=Aseg\u00farese de que todos los documentos de archivo PDF que se acaban de adherir incluyen las fuentes incrustadas aplicables.
@@ -91,7 +91,7 @@ message.request-info-failure=Se ha producido un error al solicitar informaci\u00
 message.confirm.delete-hold.title=Eliminar bloqueo
 message.confirm.delete-hold=\u00bfEst\u00e1 seguro de que desea eliminar ''{0}''?
 message.confirm.close-rejected-record.title=Confirmar
-message.confirm.close-rejected-record=\u00bfEst\u00e1 seguro de que desea eliminar el aviso de documento de archivo de rechazado?
+message.confirm.close-rejected-record=\u00bfEst\u00e1 seguro de que desea eliminar el aviso de documento de archivo rechazado? Una vez eliminado, las opciones para declarar el fichero como documento de archivo volver\u00e1n a estar disponibles.
 message.confirm.unlink.title=Desvincular confirmaci\u00f3n
 message.confirm.unlink.text=\u00bfEst\u00e1 seguro de que desea desvincular el documento de archivo?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Subir nueva versi\u00f3n
 actions.view-details=Ver detalles
 actions.view-audit-log=Ver registro de auditor\u00edas
 actions.create-record=Declarar como documento de archivo
-actions.declare-as-version-record=Declarar como documento de archivo versionado
+actions.declare-as-version-record=Declarar versi\u00f3n como documento de archivo
 actions.hide-record=Ocultar documento de archivo
 actions.reject=Rechazar
 actions.request-info=Solicitar informaci\u00f3n
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=No se pudo deshacer la interrupci\u00f3n de ''{0}''
 message.undo-cutoff.success=Deshacer interrupci\u00f3n de ''{0}''
 message.create-disposition-schedule.failure=No se pudo crear la planificaci\u00f3n de disposici\u00f3n de ''{0}''
 message.create-disposition-schedule.success=Se ha creado la planificaci\u00f3n de disposici\u00f3n de ''{0}''
-message.create-record.success=Declarado correctamente como documento de archivo
+message.create-record.success=Este fichero se ha convertido en documento de archivo y tiene acciones limitadas disponibles.
 message.create-record.failure=No se pudo declarar como documento de archivo
+message.declare-version-as-record.success=Esta versi\u00f3n del fichero se ha declarado documento de archivo
+message.declare-version-as-record.failure=La versi\u00f3n no se pudo declarar documento de archivo
 message.hide-record.success=Documento de archivo ''{0}'' ocultado correctamente
 message.hide-record.failure=No se ha podido ocultar el documento de archivo ''{0}''
 message.reject.reason=Raz\u00f3n:
@@ -481,4 +483,4 @@ file-to.substitution.date.year.week.label=Semana del a\u00f1o (por ejemplo, 31)
 
 ## Banner icon messages
 banner.rejected-record.info=Ver informaci\u00f3n sobre el documento de archivo rechazado
-banner.rejected-record.close=Eliminar el aviso de documento de archivo de rechazado
+banner.rejected-record.close=Eliminar el aviso de documento de archivo rechazado
