--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_es.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=No se han definido relaciones
+label.list.no.data.message=No se ha definido todav\u00eda ninguna relaci\u00f3n
 label.toolbar.relationships=Relaciones
-label.button.new-relationship=A\u00f1adir nueva relaci\u00f3n
+label.button.new-relationship=A\u00f1adir relaci\u00f3n
 label.confirmation.title.delete-relationship=Eliminar relaci\u00f3n
 label.confirmationPrompt.delete-relationship=\u00bfEst\u00e1 seguro de que desea eliminar ''{node.properties.cm:name}''?
 label.delete-relationship=Eliminar relaci\u00f3n
