FRENCH: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97861 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Confirmation de la destruction
 message.confirm2.destroy=Le contenu du fichier sera supprim\u00e9 d\u00e9finitivement. Voulez-vous continuer ?
 message.confirm2.destroyMultiple=Le contenu des fichiers sera supprim\u00e9 d\u00e9finitivement. Voulez-vous continuer ?
 message.confirm.hide.record.title=Masquer le document d'archives
-message.confirm.hide.record=Vous masquez le document d'archives et il ne figurera plus dans votre site de collaboration.
+message.confirm.hide.record=Ce fichier a \u00e9t\u00e9 archiv\u00e9 comme document d'archives. Cliquez sur OK pour le masquer afin qu'il n'apparaisse plus ici.
 message.select=S\u00e9lectionner...
 message.pdf-record-fonts.title=Documents d'archives PDF\u00a0: v\u00e9rification de la police int\u00e9gr\u00e9e
 message.pdf-record-fonts.accession=V\u00e9rifier que les documents d'archives PDF qui viennent d'\u00eatre vers\u00e9s \u00e0 un autre organisme contiennent les polices int\u00e9gr\u00e9es applicables.
@@ -91,7 +91,7 @@ message.request-info-failure=Erreur lors de la demande d'informations
 message.confirm.delete-hold.title=Supprimer la suspension
 message.confirm.delete-hold=Voulez-vous vraiment supprimer ''{0}''\u00a0?
 message.confirm.close-rejected-record.title=Confirmer
-message.confirm.close-rejected-record=Voulez-vous vraiment supprimer l'avertissement associ\u00e9 au rejet du document d'archives\u00a0?
+message.confirm.close-rejected-record=Voulez-vous vraiment supprimer l'avertissement associ\u00e9 au rejet du document d'archives\u00a0? Une fois supprim\u00e9, les options permettant de d\u00e9clarer le fichier comme document d'archives seront de nouveau disponibles.
 message.confirm.unlink.title=Confirmation de suppression de lien
 message.confirm.unlink.text=Voulez-vous vraiment supprimer le lien du document d'archives\u00a0?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=T\u00e9l\u00e9charger la nouvelle version
 actions.view-details=Afficher les d\u00e9tails
 actions.view-audit-log=Afficher le journal d'audit
 actions.create-record=D\u00e9clarer comme document d'archives
-actions.declare-as-version-record=D\u00e9clarer comme document d'archive versionn\u00e9
+actions.declare-as-version-record=D\u00e9clarer la version comme document d'archives
 actions.hide-record=Masquer le document d'archives
 actions.reject=Rejeter
 actions.request-info=Demander des informations
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=Impossible d''annuler le d\u00e9classement de ''{0}'
 message.undo-cutoff.success=Annuler le d\u00e9classement sur ''{0}''
 message.create-disposition-schedule.failure=Impossible de cr\u00e9er la r\u00e8gle de conservation pour ''{0}''
 message.create-disposition-schedule.success=La r\u00e8gle de conservation a \u00e9t\u00e9 cr\u00e9\u00e9e pour ''{0}''
-message.create-record.success=Bien d\u00e9clar\u00e9 comme document d'archives
+message.create-record.success=Ce fichier a \u00e9t\u00e9 archiv\u00e9 comme document d'archives et comporte un nombre limit\u00e9 d'actions
 message.create-record.failure=Impossible de d\u00e9clarer comme document d'archives
+message.declare-version-as-record.success=Cette version du fichier a \u00e9t\u00e9 d\u00e9clar\u00e9e comme document d'archives
+message.declare-version-as-record.failure=Impossible de d\u00e9clarer la version comme document d'archives
 message.hide-record.success=Le document d''archives ''{0}'' a bien \u00e9t\u00e9 masqu\u00e9
 message.hide-record.failure=Impossible de masquer le document d''archives ''{0}''
 message.reject.reason=Motif :
@@ -481,4 +483,4 @@ file-to.substitution.date.year.week.label=Semaine de l'ann\u00e9e (p.ex., 31)
 
 ## Banner icon messages
 banner.rejected-record.info=Voir les informations sur le document d'archives rejet\u00e9
-banner.rejected-record.close=Supprimer l'enregistrement d'avertissement rejet\u00e9
+banner.rejected-record.close=Supprimer l'avertissement associ\u00e9 au rejet du document d'archives
