--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_fr.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=Aucune relation d\u00e9finie
+label.list.no.data.message=Il n'existe actuellement aucune relation d\u00e9finie
 label.toolbar.relationships=Relations
-label.button.new-relationship=Ajouter une nouvelle relation
+label.button.new-relationship=Ajouter une relation
 label.confirmation.title.delete-relationship=Supprimer la relation
 label.confirmationPrompt.delete-relationship=Voulez-vous vraiment supprimer ''{node.properties.cm:name}''\u00a0?
 label.delete-relationship=Supprimer la relation
