ITALIAN: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97862 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Conferma di eliminazione definitiva
 message.confirm2.destroy=Il contenuto del file sar\u00e0 eliminato in maniera permanente. Continuare?
 message.confirm2.destroyMultiple=Il contenuto dei file sar\u00e0 eliminato in maniera permanente. Continuare?
 message.confirm.hide.record.title=Nascondi record
-message.confirm.hide.record=Si sta nascondendo il record e non sar\u00e0 pi\u00f9 possibile visualizzarlo all'interno del sito di collaborazione.
+message.confirm.hide.record=Questo file \u00e8 stato trasformato in record. Fare clic su OK per nasconderlo in modo che non possa pi\u00f9 essere visualizzato qui.
 message.select=Seleziona...
 message.pdf-record-fonts.title=Record PDF: Controllo dei caratteri incorporati
 message.pdf-record-fonts.accession=Controllare che tutti i record PDF appena inseriti includano i caratteri incorporati applicabili.
@@ -91,7 +91,7 @@ message.request-info-failure=Si \u00e8 verificato un errore durante la richiesta
 message.confirm.delete-hold.title=Annulla sospensione
 message.confirm.delete-hold=Procedere con l''eliminazione di ''{0}''?
 message.confirm.close-rejected-record.title=Conferma
-message.confirm.close-rejected-record=Procedere con la rimozione dell'avviso del record respinto?
+message.confirm.close-rejected-record=Procedere con la rimozione dell'avviso del record respinto? Dopo la rimozione, saranno di nuovo disponibili le opzioni per dichiarare il file come record.
 message.confirm.unlink.title=Scollega conferma
 message.confirm.unlink.text=Procedere con lo scollegamento del record?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Carica nuova versione
 actions.view-details=Vedi dettagli
 actions.view-audit-log=Visualizza log di audit
 actions.create-record=Dichiara come record
-actions.declare-as-version-record=Dichiara come record versione
+actions.declare-as-version-record=Dichiara versione come record
 actions.hide-record=Nascondi record
 actions.reject=Respingi
 actions.request-info=Richiedi informazioni
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=Impossibile annullare cut off per ''{0}''
 message.undo-cutoff.success=Annulla cut off su ''{0}''
 message.create-disposition-schedule.failure=Impossibile creare pianificazione della disposizione per ''{0}''
 message.create-disposition-schedule.success=Pianificazione della disposizione per ''{0}'' creata
-message.create-record.success=Dichiarazione come record riuscita
+message.create-record.success=Questo file \u00e8 stato trasformato in record e si hanno a disposizione azioni limitate
 message.create-record.failure=Impossibile dichiarare come record
+message.declare-version-as-record.success=Questa versione del file \u00e8 stata dichiarata come record
+message.declare-version-as-record.failure=Impossibile dichiarare la versione come record
 message.hide-record.success=Record ''{0}'' nascosto correttamente.
 message.hide-record.failure=Impossibile nascondere il record ''{0}''
 message.reject.reason=Motivo:
@@ -481,4 +483,4 @@ file-to.substitution.date.year.week.label=Settimana dell'anno (ad es. 31)
 
 ## Banner icon messages
 banner.rejected-record.info=Vedere le informazioni sul record respinto
-banner.rejected-record.close=Rimuovere la registrazione dell'avviso di record respinto.
+banner.rejected-record.close=Rimuovere l'avviso del record respinto
