--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=Non ci sono relazioni definite
+label.list.no.data.message=Non ci sono ancora relazioni definite
 label.toolbar.relationships=Relazioni
-label.button.new-relationship=Aggiungi nuova relazione
+label.button.new-relationship=Aggiungi Relazione
 label.confirmation.title.delete-relationship=Elimina relazione
 label.confirmationPrompt.delete-relationship=Procedere con l''eliminazione di ''{node.properties.cm:name}''?
 label.delete-relationship=Elimina relazione
