--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -70,7 +70,7 @@ label.menu.custom=\u30ab\u30b9\u30bf\u30e0\u30d7\u30ed\u30d1\u30c6\u30a3
 button.reject.record=\u30ec\u30b3\u30fc\u30c9\u306e\u5374\u4e0b
 button.request-info=\u60c5\u5831\u306e\u30ea\u30af\u30a8\u30b9\u30c8
 
-##?Pop-up Messages
+##Pop-up Messages
 message.confirm.delete.title=\u524a\u9664\u306e\u78ba\u8a8d
 message.confirm.delete=''{0}'' \u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.destroy.title=\u7834\u68c4\u306e\u78ba\u8a8d
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=\u7834\u68c4\u306e\u78ba\u8a8d
 message.confirm2.destroy=\u30d5\u30a1\u30a4\u30eb\u306e\u30b3\u30f3\u30c6\u30f3\u30c4\u306f\u5b8c\u5168\u306b\u524a\u9664\u3055\u308c\u307e\u3059\u3002\u7d9a\u3051\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm2.destroyMultiple=\u30d5\u30a1\u30a4\u30eb\u306e\u30b3\u30f3\u30c6\u30f3\u30c4\u306f\u5b8c\u5168\u306b\u524a\u9664\u3055\u308c\u307e\u3059\u3002\u7d9a\u3051\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.hide.record.title=\u30ec\u30b3\u30fc\u30c9\u3092\u975e\u8868\u793a\u306b\u3059\u308b
-message.confirm.hide.record=\u30ec\u30b3\u30fc\u30c9\u3092\u975e\u8868\u793a\u306b\u3059\u308b\u3068\u3001\u4eca\u5f8c\u3053\u306e\u30ec\u30b3\u30fc\u30c9\u306f\u30b3\u30e9\u30dc\u30ec\u30fc\u30b7\u30e7\u30f3\u30b5\u30a4\u30c8\u5185\u3067\u78ba\u8a8d\u3067\u304d\u306a\u304f\u306a\u308a\u307e\u3059\u3002
+message.confirm.hide.record=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u4fdd\u7ba1\u3055\u308c\u3066\u3044\u307e\u3059\u3002 \u3053\u3053\u306b\u8868\u793a\u3057\u306a\u3044\u5834\u5408\u306f\u3001[OK\uff3d \u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 message.select=\u9078\u629e...
 message.pdf-record-fonts.title=PDF \u30ec\u30b3\u30fc\u30c9: \u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u306e\u30c1\u30a7\u30c3\u30af
 message.pdf-record-fonts.accession=\u53d7\u8afe\u3055\u308c\u305f\u3070\u304b\u308a\u306e PDF \u30ec\u30b3\u30fc\u30c9\u306b\u3001\u9069\u5207\u306a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u304c\u542b\u307e\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u30c1\u30a7\u30c3\u30af\u3057\u307e\u3059\u3002
@@ -91,7 +91,7 @@ message.request-info-failure=\u60c5\u5831\u3092\u30ea\u30af\u30a8\u30b9\u30c8\u3
 message.confirm.delete-hold.title=\u30db\u30fc\u30eb\u30c9\u306e\u524a\u9664
 message.confirm.delete-hold=''{0}'' \u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.close-rejected-record.title=\u78ba\u8a8d
-message.confirm.close-rejected-record=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
+message.confirm.close-rejected-record=\u5374\u4e0b\u3055\u308c\u305f\u30ec\u30b3\u30fc\u30c9\u306e\u8b66\u544a\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b\u3002 \u524a\u9664\u3059\u308b\u3068\u3001\u30d5\u30a1\u30a4\u30eb\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3059\u308b\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u307e\u305f\u4f7f\u7528\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3059\u3002message.confirm.unlink.title=\u78ba\u8a8d\u306e\u30ea\u30f3\u30af\u306e\u89e3\u9664
 message.confirm.unlink.title=\u78ba\u8a8d\u306e\u30ea\u30f3\u30af\u306e\u89e3\u9664
 message.confirm.unlink.text=\u3053\u306e\u30ec\u30b3\u30fc\u30c9\u306e\u30ea\u30f3\u30af\u3092\u89e3\u9664\u3057\u3066\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=''{0}'' \u306e\u30ab\u30c3\u30c8\u30aa\u30d5\u3092\u
 message.undo-cutoff.success=''{0}'' \u3067\u30ab\u30c3\u30c8\u30aa\u30d5\u3092\u5143\u306b\u623b\u3057\u307e\u3059
 message.create-disposition-schedule.failure=''{0}'' \u306e\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u3092\u4f5c\u6210\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.create-disposition-schedule.success=''{0}'' \u306e\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u306f\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f
-message.create-record.success=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u6b63\u5e38\u306b\u5ba3\u8a00\u3055\u308c\u307e\u3057\u305f
+message.create-record.success=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u4fdd\u7ba1\u3055\u308c\u3066\u3044\u308b\u305f\u3081\u3001\u3067\u304d\u308b\u51e6\u7406\u304c\u5236\u9650\u3055\u308c\u3066\u3044\u307e\u3059
 message.create-record.failure=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.declare-version-as-record.success=\u30d5\u30a1\u30a4\u30eb\u306e\u3053\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u306f\u3001\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3055\u308c\u3066\u3044\u307e\u3059
+message.declare-version-as-record.failure=\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.hide-record.success=\u30ec\u30b3\u30fc\u30c9 ''{0}'' \u306f\u6b63\u5e38\u306b\u975e\u8868\u793a\u306b\u306a\u308a\u307e\u3057\u305f
 message.hide-record.failure=\u30ec\u30b3\u30fc\u30c9 ''{0}'' \u3092\u975e\u8868\u793a\u306b\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.reject.reason=\u7406\u7531:
