--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_ja.properties
@@ -1,6 +1,6 @@
-label.list.no.data.message=\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u95a2\u4fc2\u306f\u3042\u308a\u307e\u305b\u3093
+label.list.no.data.message=\u307e\u3060\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u95a2\u4fc2\u304c\u3042\u308a\u307e\u305b\u3093
 label.toolbar.relationships=\u95a2\u4fc2
-label.button.new-relationship=\u65b0\u3057\u3044\u95a2\u4fc2\u306e\u8ffd\u52a0
+label.button.new-relationship=\u95a2\u4fc2\u306e\u8ffd\u52a0
 label.confirmation.title.delete-relationship=\u95a2\u4fc2\u306e\u524a\u9664
 label.confirmationPrompt.delete-relationship=''{node.properties.cm:name}'' \u3092\u524a\u9664\u3057\u307e\u3059\u304b?
 label.delete-relationship=\u95a2\u4fc2\u306e\u524a\u9664
