DUTCH: Updated files as per EN-RM-rev97654
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97864 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -80,7 +80,7 @@ message.confirm2.destroy.title=Vernietigingsbevestiging
 message.confirm2.destroy=De content voor het bestand wordt permanent verwijderd, weet u zeker dat u wilt doorgaan?
 message.confirm2.destroyMultiple=De content voor de bestanden wordt permanent verwijderd, weet u zeker dat u wilt doorgaan?
 message.confirm.hide.record.title=Record verbergen
-message.confirm.hide.record=U verbergt de record en kunt deze record niet meer op uw samenwerkingssite zien.
+message.confirm.hide.record=Van dit bestand is een record gemaakt. Klik op OK om het te verbergen, zodat het hier niet zichtbaar is.
 message.select=Selecteren...
 message.pdf-record-fonts.title=PDF-records: controle van ingesloten lettertypes
 message.pdf-record-fonts.accession=Controleer of alle net overgedragen PDF-records de toepasselijke ingesloten lettertypes bevatten.
@@ -91,7 +91,7 @@ message.request-info-failure=Er is een fout opgetreden tijdens de informatie-aan
 message.confirm.delete-hold.title=Wachtstand verwijderen
 message.confirm.delete-hold=Weet u zeker dat u ''{0}'' wilt verwijderen?
 message.confirm.close-rejected-record.title=Bevestigen
-message.confirm.close-rejected-record=Weet u zeker dat u de afgewezen-recordwaarschuwing wilt verwijderen?
+message.confirm.close-rejected-record=Weet u zeker dat u de afgewezen-recordwaarschuwing wilt verwijderen? Nadat de waarschuwing is verwijderd, zijn de opties voor het declareren van het bestand als een record weer beschikbaar.
 message.confirm.unlink.title=Bevestiging van koppelingsopheffing
 message.confirm.unlink.text=Weet u zeker dat u de recordkoppeling wilt opheffen?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Nieuwe versie uploaden
 actions.view-details=Details weergeven
 actions.view-audit-log=Auditlog weergeven
 actions.create-record=Declareren als record
-actions.declare-as-version-record=Declareren als versierecord
+actions.declare-as-version-record=Versie declareren als record
 actions.hide-record=Record verbergen
 actions.reject=Afwijzen
 actions.request-info=Informatie aanvragen
@@ -197,8 +197,10 @@ message.undo-cutoff.failure=Kon afsluiten van ''{0}'' niet ongedaan maken
 message.undo-cutoff.success=Afsluiten van ''{0}'' ongedaan maken
 message.create-disposition-schedule.failure=Kon geen beschikkingsschema voor ''{0}'' maken
 message.create-disposition-schedule.success=Beschikkingsschema voor ''{0}'' gecre\u00eberd
-message.create-record.success=Als record gedeclareerd
+message.create-record.success=Van dit bestand is een record gemaakt en voor het bestand zijn beperkte acties beschikbaar
 message.create-record.failure=Declareren als record mislukt
+message.declare-version-as-record.success=Deze versie van het bestand is gedeclareerd als record
+message.declare-version-as-record.failure=Declareren van versie als record mislukt
 message.hide-record.success=Record ''{0}'' is verborgen
 message.hide-record.failure=Kon record ''{0}'' niet verbergen
 message.reject.reason=Reden:
